Creando el cuerpo y el titulo

--- a/MiRepo.html
+++ b/MiRepo.html
@@ -1,7 +1,9 @@
 DOCTYPE
 <html>
     <head>
+        <title>Creando mi repositorio</title>
     </head>
     <body>
+        <h1>Creando mi repositorio</title>
     </body>
 </html>
