Creando el titulo y mensaje h1

--- a/MiRepo.html
+++ b/MiRepo.html
@@ -1,7 +1,9 @@
 DOCTYPE
 <html>
     <head>
+        <title>Creando mi repositorio</title>
     </head>
-    <body>
+    <body> 
+        <h1>Creando mi repositorio</h1>
     </body>
 </html>
