--- a/MiRepo.html
+++ b/MiRepo.html
@@ -5,5 +5,6 @@ DOCTYPE
     </head>
     <body>
         <h1>Creando mi repositorio</title>
+        <p>Estamos creando un parrafo para la rama 1</p>
     </body>
 </html>
