Creando la rama 3

--- a/MiRepo.html
+++ b/MiRepo.html
@@ -6,5 +6,6 @@ DOCTYPE
     <body>
         <h1>Creando mi repositorio</title>
         <p>Estamos creando un parrafo para la rama 1</p>
+        <p>Estamos creando un parrafo para la rama 3</p>
     </body>
 </html>
